--- a/dockerplay.yml
+++ b/dockerplay.yml
@@ -1,9 +1,12 @@
+#yaml document start with ----
 ---
-- 
-  host: all 
-
-
-  task:
-  - name: update my ubuntu sytem
-    ansible.builtin.apt:
-    update_cache: yes
+- #this minus is required in yaml it indicate list of items. Playbook contains a list of play and every play will be a dictionary
+#host: where you want to run your playbook
+  hosts: all
+  become: yes
+#vars: variable that will apply to the play
+  tasks: 
+  - name: update my system
+    apt:
+      update_cache: yes
+  
