ansible playbook to install docker

--- a/dockerplay.yml
+++ b/dockerplay.yml
@@ -9,4 +9,31 @@
   - name: update my system
     apt:
       update_cache: yes
-  
+  - name: Install a list of packages for docker
+    ansible.builtin.apt:
+      pkg:
+      - ca-certificates
+      - curl
+      - gnupg
+      - lsb-release
+  - name: Download gpg key for docker 
+    ansible.builtin.apt_key:
+      url: https://download.docker.com/linux/ubuntu/gpg
+      state: present  
+  - name: add docker repo 
+    ansible.builtin.apt_repository:
+      repo: deb https://download.docker.com/linux/ubuntu focal stable
+      state: present
+  - name: install docker 
+    ansible.builtin.apt:
+      pkg:
+      - docker-ce
+      - docker-ce-cli
+      - containerd.io
+      - docker-compose-plugin
+  - name: install python package manage
+    apt: 
+      name: python3-pip 
+  - name: install docker module for python 
+    pip:
+      name: docker
